--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "immutable": "^4.0.0-rc.12",
     "jest": "^24.7.1",
     "ot-json1": "^0.2.4",
+    "prettier": "^1.19.1",
     "rich-text": "^3.1.0"
   },
   "peerDependencies": {
