--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "eslint": "^5.16.0",
     "immutable": "^4.0.0-rc.12",
     "jest": "^24.7.1",
-    "ot-json1": "^0.2.4",
+    "ot-json1": "1.0.1",
     "prettier": "^1.19.1",
     "rich-text": "^3.1.0"
   },
   "peerDependencies": {
     "immutable": ">= 3.0",
-    "ot-json1": "*"
+    "ot-json1": ">= 1.0"
   },
   "jest": {
     "roots": [
